--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "elevenlabs": "^1.59.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "openai": "^5.1.0",
     "pdfkit": "^0.17.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
